--- a/index.html
+++ b/index.html
@@ -4,21 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
     <title>jrsy</title>
-    <!-- ✨ 新增：让iOS设备将网页视为全屏应用 ✨ -->
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <!-- ✨ 新增：设置iOS状态栏的样式，例如“黑色半透明” ✨ -->
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <!-- ✨ 新增：设置主屏幕应用的标题 ✨ -->
-    <meta name="apple-mobile-web-app-title" content="jrsy小手机">
-
-    <!-- ✨ 新增：添加 Web App Manifest，这是现代Web App的关键 ✨ -->
-    <link rel="manifest" href="/manifest.json">
-
-    <!-- ✨ 新增：指定添加到主屏幕的图标 (大小可以根据需求调整) ✨ -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="/apple-touch-icon-167x167.png">
+    <link rel="apple-touch-icon" href="https://jrsy081113-hue.github.io/jrsy/star-icon.png">
+    <link rel="apple-touch-icon-precomposed" href="https://jrsy081113-hue.github.io/jrsy/star-icon.png">
     <style id="customBubblePreviewStyle"></style>
     <style id="customBubbleStyle"></style>
     <style>
