--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
     <title>jrsy</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -26,7 +26,7 @@
             background: #000;
             overflow: hidden;
             width: 100vw;
-            height: 100vh;
+            height: 100dvh;
             position: fixed;
             top: 0;
             touch-action: manipulation;
@@ -42,7 +42,7 @@
 
         .phone {
             width: 100vw;
-            height: 100vh;
+            height: 100dvh;
             background: var(--theme-bg, #f7f7f7);
             position: relative;
             overflow: hidden;
@@ -440,7 +440,7 @@
         /* --- MODIFIED: Bottom Dock Styles --- */
         .bottom-dock {
             position: absolute;
-            bottom: 20px;
+            bottom: calc(20px + env(safe-area-inset-bottom, 0px));
             left: 50%;
             transform: translateX(-50%);
             width: calc(100% - 30px);
@@ -588,7 +588,7 @@
             border-top: 1px solid var(--border-color, #e0e0e0);
             display: flex;
             position: absolute;
-            bottom: 0;
+            bottom: env(safe-area-inset-bottom, 0px);
             width: 100%;
             z-index: 100;
         }
