--- a/index.html
+++ b/index.html
@@ -8914,19 +8914,8 @@ ${chatHistorySummary || '无'}
 你的好友"${userProfile.name}"刚刚发布了一条朋友圈。
 朋友圈内容是：'${sanitizedMomentContent}'
 
-你的任务是：**必须根据你的人设和朋友圈内容，构思一句真实、口语化的评论，并以JSON格式返回。**
-
-# 规则：
-1.  你的评论必须和朋友圈内容高度相关。
-2.  如果朋友圈内容是负面的（如“好无聊啊”），你的评论应该是安慰或互动的，绝对不能是“真不错！”这种不相关的夸奖。
-3.  你的回复必须非常简短，就像真人评论一样。
-4.  **你的回复必须是一个JSON对象，包含一个键“comment”，值是你生成的评论文字。这个评论文字必须富有情感，完全符合你的人设，不要敷衍。不要包含任何其他解释或引号。**
-
-# 范例：
--   如果朋友圈是“今天天气真好！”，一个活泼的人设可能会评论：{"comment": "是呀是呀，超适合出去玩！"}
--   如果朋友圈是“好无聊啊”，一个温柔的人设可能会评论：{"comment": "摸摸头，要不要聊聊天呀？"}
-
-现在，请根据你的角色设定和上面的朋友圈内容，生成你的评论：`;
+请根据你的人设和朋友圈内容，生成一个简短的评论。
+你的回复必须是JSON对象，包含一个键"comment"，值是你生成的评论文字。
 
                 const response = await fetch(`${settings.apiUrl}/chat/completions`, {
                     method: 'POST',
