--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             -ms-user-select: none;
         }
 
+html {
+    height: 100%;
+    overflow: hidden;
+}
+
         body {
     font-family: var(--font-family, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif);
     background: #000;
@@ -34,14 +39,10 @@
     transition: all 0.3s ease;
     color: var(--text-color, #000);
 
-    /* --- 新增：固定body，防止拖动和回弹 --- */
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    /* --- 修改后的最终代码 --- */
+    height: 100%;
     overflow: hidden;
-    /* --- 新增代码结束 --- */
+    /* --- 修改结束 --- */
 }
 
         .phone {
