--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ html {
         /* --- 步骤 2.1: 替换 body 样式，让它回归默认 --- */
 body {
     font-family: var(--font-family, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif);
-    background: #000;
+    background: #f7f7f7; /* <-- 就是这里，把 #000 改成了 #f7f7f7 */
     touch-action: manipulation;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
