--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ html {
         /* --- 步骤 2.1: 替换 body 样式，让它回归默认 --- */
 body {
     font-family: var(--font-family, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif);
-    background: #f7f7f7; /* <-- 就是这里，把 #000 改成了 #f7f7f7 */
+    background: #000;
     touch-action: manipulation;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -40,9 +40,6 @@ body {
     transition: all 0.3s ease;
     color: var(--text-color, #000);
     /* 关键：确保这里没有任何 position, height, width, top, overflow */
-    position: relative; /* 新增：把它变成一个可靠的容器 */
-    overflow: hidden;   /* 新增：禁止它本身被滚动或拖拽 *
-    
 }
 
         /* --- 步骤 2.2: 替换 .phone 样式，使用JS计算出的正确高度 --- */
