--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
+   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover">
     <title>jrsy</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -20,6 +20,12 @@
             -moz-user-select: none;
             -ms-user-select: none;
         }
+
+.bottom-first-loan {
+    bottom: calc(55px + env(safe-area-inset-bottom));
+    bottom: calc(55px + constant(safe-area-inset-bottom));
+}
+
 
 html {
     height: 100%;
